@@ -4,7 +4,7 @@
 <!DOCTYPE overlay SYSTEM "chrome://avim/locale/avim.dtd">
 
 <overlay id="avim-overlay" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul" xmlns:html="http://www.w3.org/1999/xhtml">
-	<!-- Firefox > Edit > Vietnamese Input -->
+	<!-- App menu -->
 	<!-- Copied from avim.xul -->
 	<vbox id="appmenuPrimaryPane">
 		<menu id="avim-appmenu" label="&avim-menu.label;" insertafter="appmenu_find">
@@ -29,6 +29,6 @@
 	
 	<!-- Add-on bar menu -->
 	<statusbar id="addon-bar">
-		<statusbarpanel id="avim-status" label="&AVIM.label;" disabledLabel="&avim-disabled.label;" tooltip="avim-status-tooltip" popup="avim-status-popup" ondblclick="avim.toggle();" />
+		<statusbarpanel id="avim-status" tooltip="avim-status-tooltip" popup="avim-status-popup" observes="avim-status-bc" ondblclick="avim.toggle();" />
 	</statusbar>
 </overlay>
