@@ -142,7 +142,7 @@
 			<Description>
 				<em:id>toolkit@mozilla.org</em:id>
 				<em:minVersion>1.8.1</em:minVersion>
-				<em:maxVersion>27.0</em:maxVersion>
+				<em:maxVersion>29.0</em:maxVersion>
 			</Description>
 		</em:targetApplication>
 		
