@@ -7,7 +7,6 @@
 <!ENTITY avim-enabled.label "Aktiviert">
 <!ENTITY avim-enabled.accesskey "A">
 <!ENTITY avim-enabled.description "&AVIM.label; für vietnamesische Eingabe aktivieren">
-<!ENTITY avim-disabled.label "Deaktiviert">
 
 <!ENTITY avim-prev-method.modifiers "accel">
 <!ENTITY avim-prev-method.key ";">
