@@ -27,8 +27,6 @@
 <!ENTITY avim-menu-next-method.label "Kiểu Gõ Sau">
 <!ENTITY avim-menu-next-method.accesskey "S">
 
-<!ENTITY avim-disabled.label "Tắt">
-
 <!ENTITY avim-spell.modifiers "accel,alt">
 <!ENTITY avim-spell.key "S">
 <!ENTITY avim-spell.label "Đúng Chính Tả">
