@@ -344,6 +344,9 @@ Version ${Version} (${Date})
  - Added support for editing Google Docs text documents created in June 2010 or
    later (requires Firefox 4 or equivalent).
  - Added a Vietnamese Input menu under the Firefox menu (Windows and Linux).
+ - Consolidated the various toolbar buttons into a single toolbar button that
+   resembles the status bar panel. When upgrading to Firefox 29, this button is
+   automatically added to the toolbar.
  - Firefox Sync can now keep AVIM preferences synchronized across different
    installations of Firefox and Firefox Mobile.
  - Fixed an issue in rich text controls where selecting text and pressing
